--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 server.port=5566
 
 server.servlet.context-path=/crud
+#\u5220\u9664\u51FA\u95EE\u9898\u8981\u52A0\u8FD9\u4E00\u884C
+spring.mvc.hiddenmethod.filter.enabled=true
 
 #\u6211\u4EEC\u7684\u914D\u7F6E\u6587\u4EF6\u653E\u5728\u7684\u771F\u5B9E\u4F4D\u7F6E
 spring.messages.basename=i18n.login
